@startuml skripsi_class_diagram_usecases
title Class Diagram — Domain terkait use case skripsi\nButik Busana Fashion (PWA, pelanggan)

skinparam classAttributeIconSize 0
skinparam PackagePadding 10
skinparam RoundCorner 6

package "Otentikasi" {
  class Role {
    +id : String
    +name : String
  }

  class User {
    +id : String
    +email : String
    +password : String
    +nickname : String
    +slug : String
    +profilePhoto : String
    +phones : String[]
    +addresses : Json[]
    +roleId : String
  }

  User "n" --> "0..1" Role : berperan
}

package "Katalog Produk" {
  class Collection {
    +id : String
    +name : String
    +slug : String
    +imageUrl : String
    +numberOfProducts : Int
  }

  class Product {
    +id : String
    +name : String
    +slug : String
    +price : Float
    +discountedPrice : Float
    +quantity : Int
    +weight : Float
    +media : Json[]
    +variants : Json[]
    +collectionIds : String[]
  }

  Product ..> Collection : penyaringan\nlewat collectionIds
}

package "Keranjang Belanja" {
  class Cart {
    +id : String
    +userId : String
    +lineItems : Json[]
  }

  class LineItemKeranjang <<struktur JSON>> {
    +productId : String
    +variantId : String
    +quantity : Int
    +price : Float
    +productName : String
    +image : String
  }

  Cart *-- "0..*" LineItemKeranjang : lineItems

  note right of Cart
    Pelanggan tamu tidak punya Cart
    baris disimpan di localStorage
  end note
}

package "Transaksi" {
  enum PaymentStatus {
    NOT_PAID
    PAID
  }

  class Order {
    +id : String
    +orderNumber : String
    +userId : String
    +status : String
    +paymentStatus : PaymentStatus
    +lineItems : Json[]
    +subtotal : Float
    +shippingCost : Float
    +total : Float
    +recipientName : String
    +recipientPhone : String
    +address : String
    +layananKurir : String
    +catatan : String
    +metodePembayaran : String
    +paymentDeadlineReminder30SentAt : DateTime
    +paymentDeadlineReminder15SentAt : DateTime
    +paymentDeadlineReminder5SentAt : DateTime
  }

  class PaymentEvidence {
    +id : String
    +orderId : String
    +orderNumber : String
    +linkBuktiPembayaran : String
    +namaFoto : String
  }

  class RekeningBank {
    +id : String
    +namaPenerima : String
    +jenisBank : String
    +nomorRekening : String
    +gambarBank : String
  }

  Order *-- "0..*" PaymentEvidence
  Order --> PaymentStatus

  note bottom of Order
    status: APPROVED atau CANCELED
    Pembayaran: Midtrans Snap VA QRIS e-wallet
    atau bukti transfer manual + approve admin
    Pesanan tamu memakai User sistem guest
  end note

  Order ..> RekeningBank : referensi transfer manual
}

package "Notifikasi PWA" {
  class PushSubscription {
    +id : String
    +userId : String
    +guestKey : String
    +endpoint : String
    +p256dh : String
    +auth : String
    +userAgent : String
  }

  User "1" -- "0..*" PushSubscription : terdaftar
  Order ..> PushSubscription : push via userId\npesanan dan pembayaran

  note bottom of PushSubscription
    userId opsional saat tamu
    guestKey dari localStorage
    endpoint unik per perangkat
  end note
}

package "Layanan Eksternal" <<Cloud>> {
  class Midtrans <<external>> {
    +createTransactionToken()
    +kirimNotifikasiWebhook()
  }

  class SistemCron <<external>> {
    +paymentDeadlineReminder()
    +cancelExpiredOrders()
  }
}

Order ..> Midtrans : proses pembayaran
SistemCron ..> Order : pengingat deadline\npembatalan otomatis
Midtrans ..> Order : update PAID via webhook
SistemCron ..> User : push pengingat dan batal

User "1" -- "0..1" Cart
User "1" -- "0..*" Order

@enduml
